--- a/src/MinimalHelpers.Binding/MinimalHelpers.Binding.csproj
+++ b/src/MinimalHelpers.Binding/MinimalHelpers.Binding.csproj
@@ -34,7 +34,7 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.2.3" />
 	</ItemGroup>
 
 	<ItemGroup>
