--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -45,6 +45,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
           tag_name: v${{ steps.nbgv.outputs.NuGetPackageVersion }}
-          release_name: Release v$${{ steps.nbgv.outputs.NuGetPackageVersion }}
+          release_name: Release v${{ steps.nbgv.outputs.NuGetPackageVersion }}
           draft: false
           prerelease: false
